src/tests/functionality/assignment_4_control_flow/invalid_semantic/03_switch_case_direct_variable_declaration.c
int main() {
    int x = 1;

    switch (x) {
        case 1:
            int local = 10;
            x = local;
            break;

        default:
            x = 0;
            break;
    }

    return x;
}